# Hello-CloudXR-Java

./: .gitignore  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: background_show_camera.frag
app/src/main/cpp/: hello_ar_application.cc  hello_ar_application.h  jni_interface.cc  util.cc  util.h
app/src/main/java/com/google/ar/core/examples/java/common/helpers/: DisplayRotationHelper.java  TapHelper.java
app/src/main/java/com/google/ar/core/examples/java/common/rendering/: BackgroundRenderer.java
app/src/main/java/com/google/ar/core/examples/java/common/samplerender/arcore/: BackgroundRenderer.java
app/src/main/java/com/google/ar/core/examples/java/helloar/: HelloArActivity.java  ImageUtils.java  JniInterface.java  Log.java  PermissionHelper.java  ServerIPDialog.java
app/src/main/res/values/: strings.xml
